# transient

./: .env.example  .env.template  .gitignore  IMPLEMENTATION_STRATEGY.md  README.md  TODO_SUMMARY.md  main.py  pyproject.toml  script.md  spec_from_transient.md
config/: tolerances.yaml
data/: refmaster_builder.py
docs/: API_SERVICE.md  API_TESTING_TOOLS.md  ARCHITECTURE.md  DEMO_SCRIPT.md  FUNDAMENTALS_RISK_DATA.md  INSTALL.md  README.md  financialdatasets_info.md
docs/data_tools/: README.md
docs/desk_agent/: README.md
docs/oms/: README.md
docs/pricing/: API_PRICING.md  PRICING_PERF.md  README.md
docs/refmaster/: README.md
docs/service/: API_SERVICE.md  README.md
docs/ticker_agent/: README.md  TESTING.md
docs/week2/: README.md
examples/data_tools/: qa.json  qa.md  sample_qa.jsonl  snapshot_output.json  snapshot_output.md
examples/refmaster/: demo_ambiguity.py
examples/ticker_agent/: run_income_statement.json  run_income_statement.py
src/data_tools/: README.md  fd_api.py  fmp_api.py  qa_builder.py  schemas.py  sec_cik.py  todo.md
src/desk_agent/: README.md  __init__.py  __main__.py  classifier.py  config.py  intents_builder.py  intents_data.json  intents_loader.py  orchestrator.py  ticker_agent.py  todo.md
src/oms/: README.md  __init__.py  oms_agent.py  schema.py  todo.md
src/pricing/: README.md  __init__.py  config.py  logger.py  marks.csv  normalizer.py  pricing_agent.py  schema.py  todo.md
src/refmaster/: AMBIGUITY_DEMO.md  README.md  __init__.py  __main__.py  normalizer_agent.py  refmaster.md  refmaster.py  refmaster_builder.py  refmaster_data.json  schema.py  todo.md
src/service/: API_SERVICE.md  README.md  __init__.py  api.py  config.py  main.py  todo.md
src/ticker_agent/: README.md  __init__.py  classifier.py  intents.md  intents_builder.py  intents_data.json  intents_loader.py  prompts.py  ticker_agent.py  todo.md
tests/data_tools/: test_connectivity.py  test_dividend_behavior.py  test_fd_api.py  test_fmp_api.py  (+1 more)
(+13 files in other folders)
